TestSuite/PascalABCTests/errors/err0306.pas
unit err0306;

interface

procedure p1;

implementation

var
  b: byte;

procedure p1;
begin
  err0306.err0306.err0306.p1;
end;

end.